k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: flag-service
  labels:
    app: flag-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      containers:
        - name: flag-service
          image: 103568492404.dkr.ecr.us-east-1.amazonaws.com/toggle-master-dev/flag-service:922d4d46c45f7a293415fd1b433ecdf616665f73
          ports:
            - containerPort: 8002
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 10
